--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -103,7 +103,7 @@
             cancelButtonText: "取消", // 取消按钮的 文字
             focusCancel: true, // 是否聚焦 取消按钮
             reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
-        }).then((isConfirm) => {
+        }).then(function(isConfirm){
             try {
                 //判断 是否 点击的 确定按钮
                 if (isConfirm.value) {
@@ -128,7 +128,7 @@
                                 cancelButtonText: "取消", // 取消按钮的 文字
                                 focusCancel: true, // 是否聚焦 取消按钮
                                 reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
-                            }).then((isConfirm) => {
+                            }).then(function(isConfirm){
                                 try {
                                     window.location.reload();
                                 } catch (e) {
@@ -159,7 +159,7 @@
             cancelButtonText: "取消", // 取消按钮的 文字
             focusCancel: true, // 是否聚焦 取消按钮
             reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
-        }).then((isConfirm) => {
+        }).then(function(isConfirm){
             try {
                 //判断 是否 点击的 确定按钮
                 if (isConfirm.value) {
@@ -184,7 +184,7 @@
                                 cancelButtonText: "取消", // 取消按钮的 文字
                                 focusCancel: true, // 是否聚焦 取消按钮
                                 reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
-                            }).then((isConfirm) => {
+                            }).then(function(isConfirm){
                                 try {
                                     window.location.reload();
                                 } catch (e) {
