--- a/src/main/resources/static/css/node.css
+++ b/src/main/resources/static/css/node.css
@@ -101,7 +101,7 @@ select {
   border-radius:5px;
   appearance:none;
   -moz-appearance:none;
-  -webkit-appearance:none;
+  /*-webkit-appearance:none;*/
   /*background: url("https://raw.githubusercontent.com/ourjs/static/gh-pages/2015/arrow.png") no-repeat scroll right center transparent;*/
   padding-right: 60px;
 }
