--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,34 +1,31 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>登入</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <title>第一个HTML页面</title>
+</head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-<div class="container">
-	<h1>登入</h1>
-	<div th:if="${param.error}" class="alert alert-danger" role="alert">
-		用户名或密码错误123123
-	</div>
-	<form method="post" th:action="@{/login}">
-		<div class="form-group">
-			<label for="username">用户名</label>
-			<input name="username" type="text" class="form-control" id="username" placeholder="输入用户名">
-		</div>
-		<div class="form-group">
-			<label for="password">密码</label>
-			<input name="password" type="password" class="form-control" id="password" placeholder="输入密码">
-		</div>
-<!--		<div class="form-group form-check">-->
-<!--			<input name="remember-me" type="checkbox" class="form-check-input" id="remember">-->
-<!--			<label class="form-check-label" for="remember">记住密码</label>-->
-<!--		</div>-->
-		<button type="submit" class="btn btn-primary">登入</button>
-	</form>
+<div align="center">
+    <h2>自定义登录页面</h2>
+    <form th:action="@{/login}" method="post">
+        <label>
+            <span>用户名：</span>
+            <input type="text" name="username">
+            <!--<input type="text" name="uname">-->
+        </label>
+        <br/>
+        <label>
+            <span>密码：</span>
+            <input type="password" name="password">
+            <!--<input type="password" name="psd">-->
+        </label>
+        <input type="submit" class="submit input_button"  value="登录">
+    </form>
 </div>
 </body>
 </html>
