--- a/src/main/resources/templates/node.html
+++ b/src/main/resources/templates/node.html
@@ -137,14 +137,156 @@
                         <h5 style="color: red;display: none" id="dbfail">连接失败</h5>
                     </div>
 
+                    <div class="moda moda-root">
+
+                    </div>
+                    <div class="moda-le">
+                        <h4 class="modal-title moda-root-info">
+                            LevelDB路径:
+                        </h4>
+                        <input class="form-control" style="width: 70%" id="leveldb">
+                    </div>
+
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="closebut">
                         关闭
                     </button>
                     <button type="button" id="bt_submit" class="btn btn-primary">
                         提交
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <div class="moda">
+                        <h4 class="modal-title moda_info">
+                            节点IP:
+                        </h4>
+                        <input class="form-control" id="update_nodeIp" readonly="readonly">
+                    </div>
+                    <div class="moda">
+                        <h4 class="modal-title moda_info">
+                            节点PORT:
+                        </h4>
+                        <input class="form-control" id="update_nodePort" readonly="readonly">
+                    </div>
+                    <div class="moda">
+                        <h4 class="modal-title moda_info">
+                            节点类型:
+                        </h4>
+                        <select id="update_nodetype">
+                            <option th:value=1>全节点</option>
+                            <option th:value=2>矿工节点</option>
+                        </select>
+                    </div>
+
+                    <div class="moda moda-root">
+
+                        <h4 class="modal-title"style="width: 100%">
+                            SSH远程连接信息
+                        </h4>
+                    </div>
+                    <div class="moda-le">
+                        <div class="">
+                            <h4 class="modal-title moda-root-info">
+                                用户:
+                            </h4>
+                            <input class="form-control moda-in" id="update_username">
+                        </div>
+                        <div class="">
+                            <h4 class="modal-title moda-root-info">
+                                密码:
+                            </h4>
+                            <input class="form-control moda-in" id="update_password" type="password">
+                        </div>
+                        <div class="ju-c">
+                            <button type="button" class="btn btn-primary" id="connection">测试连接</button>
+                        </div>
+                    </div>
+                    <div class="moda-le">
+                        <h5 style="color: green;display: none" id="wait">请等待...</h5>
+                        <h5 style="color: green;display: none" id="success">连接成功</h5>
+                        <h5 style="color: red;display: none" id="fail">连接失败</h5>
+                    </div>
+
+
+                    <div class="moda moda-root">
+
+                        <h4 class="modal-title"style="width: 100%">
+                            数据库远程连接信息
+                        </h4>
+                    </div>
+                    <div class="moda-le">
+                        <h4 class="modal-title moda-root-info">
+                            IP:
+                        </h4>
+                        <input class="form-control" style="width: 70%" id="update_dbip">
+                    </div>
+                    <div class="moda-le">
+                        <div class="">
+                            <h4 class="modal-title moda-root-info">
+                                PORT:
+                            </h4>
+                            <input class="form-control moda-in" id="update_dbport">
+                        </div>
+                        <div class="">
+                            <h4 class="modal-title moda-name-info">
+                                数据库名称:
+                            </h4>
+                            <input class="form-control moda-in" id="update_database">
+                        </div>
+                    </div>
+                    <div class="moda-le">
+                        <div class="">
+                            <h4 class="modal-title moda-root-info">
+                                用户:
+                            </h4>
+                            <input class="form-control moda-in" id="update_dbusername">
+                        </div>
+                        <div class="">
+                            <h4 class="modal-title moda-root-info">
+                                密码:
+                            </h4>
+                            <input class="form-control moda-in" id="update_dbpassword" type="password">
+                        </div>
+                        <div class="ju-c">
+                            <button type="button" class="btn btn-primary" id="dbconnection">数据库连接测试</button>
+                        </div>
+                    </div>
+                    <div class="moda-le">
+                        <h5 style="color: green;display: none" id="dbwait">请等待...</h5>
+                        <h5 style="color: green;display: none" id="dbsuccess">连接成功</h5>
+                        <h5 style="color: red;display: none" id="dbfail">连接失败</h5>
+                    </div>
+
+                    <div class="moda moda-root">
+
+                    </div>
+                    <div class="moda-le">
+                        <h4 class="modal-title moda-root-info">
+                            LevelDB路径:
+                        </h4>
+                        <input class="form-control" style="width: 70%" id="update_leveldb">
+                    </div>
+
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="update_closebut">
+                        关闭
+                    </button>
+                    <button type="button" id="update_submit" class="btn btn-primary">
+                        更新
                     </button>
                 </div>
             </div>
@@ -172,6 +314,7 @@
                 <td class="operations">
                     <button th:if="${node.getNodeIP()}+':'+${node.getNodePort()} != ${nodeip} "  class="do bt_bind" th:id="${node.getNodeIP()}+':'+${node.getNodePort()}">绑定</button>
                     <button th:if="${node.getNodeIP()}+':'+${node.getNodePort()} == ${nodeip} "  class="do bt_unbind" th:id="${node.getNodeIP()}+':'+${node.getNodePort()}">解绑</button>
+                    <button th:if="${node.getNodeIP()}+':'+${node.getNodePort()} != ${nodeip} "  class="do bt_update" data-toggle="modal" data-target="#updateModal" th:id="${node.getNodeIP()}+':'+${node.getNodePort()} ">编辑</button>
                     <button class="do bt_delete" th:id="${node.getNodeIP()}+':'+${node.getNodePort()}">删除</button>
                 </td>
             </tr>
@@ -196,8 +339,7 @@
             }
             var urlData = {nodeIP: $('#nodeIp').val(),nodePort: $('#nodePort').val(), nodeType: $('#nodetype').val(), userName: $('#username').val(),
                             password: $('#password').val(), dbIP: $('#dbip').val(), dbPort: $('#dbport').val(), databaseName: $('#database').val(),
-                            dbUsername: $('#dbusername').val(), dbPassword: $('#dbpassword').val()};
-
+                            dbUsername: $('#dbusername').val(), dbPassword: $('#dbpassword').val(),leveldbPath: $('#leveldb').val()};
             Swal.fire({
                 type: 'question', // 弹框类型
                 title: '', //标题
@@ -354,6 +496,7 @@
                                     reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
                                 }).then(function(isConfirm){
                                     try {
+                                        clearTable();
                                         //判断 是否 点击的 确定按钮
                                         if (isConfirm.value) {
                                             window.location.reload();
@@ -365,8 +508,7 @@
                             }
                         }, 'json');
 
-                    }
-                    else {
+                    } else {
                         Swal.fire("取消", "点击了取消", "error");
                     }
                 } catch (e) {
@@ -503,6 +645,117 @@
                 }
             });
         });
+
+        //获取详情
+        $(' .bt_update').click(function () {
+            var urlData = {ipPort: event.target.id};
+            $.get('searchNode', urlData, function (result) {
+                console.log(result.nodeIP)
+                document.getElementById("update_nodeIp").innerHTML = "result.nodeIP";
+                console.log($("#update_nodeIp").val());
+                $("#update_nodeIp").val(result.nodeIP);
+                $("#update_nodePort").val(result.nodePort);
+                $("#update_nodetype").val(result.nodeType);
+                $("#update_username").val(result.userName);
+                $("#update_password").val(result.password);
+                $('#update_dbip').val(result.dbIP);
+                $("#update_dbport").val(result.dbPort);
+                $("#update_database").val(result.databaseName);
+                $("#update_dbusername").val(result.dbUsername);
+                $("#update_dbpassword").val(result.dbPassword);
+                $("#update_leveldb").val(result.leveldbPath);
+            }, 'json');
+        });
+
+        //更新
+        $('#update_submit').click(function () {
+            var urlData = {nodeIP: $('#update_nodeIp').val(),nodePort: $('#update_nodePort').val(), nodeType: $('#update_nodetype').val(), userName: $('#update_username').val(),
+                password: $('#update_password').val(), dbIP: $('#update_dbip').val(), dbPort: $('#update_dbport').val(), databaseName: $('#update_database').val(),
+                dbUsername: $('#update_dbusername').val(), dbPassword: $('#update_dbpassword').val(), leveldbPath:$('#update_leveldb').val()};
+
+            Swal.fire({
+                type: 'question', // 弹框类型
+                title: '', //标题
+                text: "是否更新！", //显示内容
+
+                confirmButtonColor: '#3085d6',// 确定按钮的 颜色
+                confirmButtonText: '确定',// 确定按钮的 文字
+                showCancelButton: true, // 是否显示取消按钮
+                cancelButtonColor: '#d33', // 取消按钮的 颜色
+                cancelButtonText: "取消", // 取消按钮的 文字
+
+                focusCancel: true, // 是否聚焦 取消按钮
+                reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
+            }).then(function(isConfirm){
+                try {
+                    //判断 是否 点击的 确定按钮
+                    if (isConfirm.value) {
+                        $.get('updateNode', urlData, function (result) {
+                            $(".modal").css("display", "none");
+                            $(".modal-backdrop").css("display", "none");
+                            if(result){
+                                Swal.fire({
+                                    type: 'success', // 弹框类型
+                                    title: '', //标题
+                                    text: "更新成功！", //显示内容
+
+                                    confirmButtonColor: '#3085d6',// 确定按钮的 颜色
+                                    confirmButtonText: '确定',// 确定按钮的 文字
+                                    showCancelButton: false, // 是否显示取消按钮
+                                    cancelButtonColor: '#d33', // 取消按钮的 颜色
+                                    cancelButtonText: "取消", // 取消按钮的 文字
+
+                                    focusCancel: true, // 是否聚焦 取消按钮
+                                    reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
+                                }).then(function(isConfirm){
+                                    try {
+                                        //判断 是否 点击的 确定按钮
+                                        if (isConfirm.value) {
+                                            window.location.reload();
+                                        }
+                                    } catch (e) {
+                                        alert(e);
+                                    }
+                                });
+                            }else {
+                                Swal.fire("", "失败", "error");
+                            }
+                        }, 'json');
+
+                    }
+                    else {
+                        Swal.fire("取消", "点击了取消", "error");
+                    }
+
+                } catch (e) {
+                    alert(e);
+                }
+            });
+        });
+
+
+        $(' .close').click(function () {
+            clearTable();
+        });
+
+
+        $('#closebut').click(function () {
+            clearTable();
+        });
+
+        function clearTable() {
+            $("#nodeIp").val("");
+            $("#nodePort").val("");
+            $("#nodetype").val(1);
+            $("#username").val("");
+            $("#password").val("");
+            $("#dbip").val("");
+            $("#dbport").val("");
+            $("#database").val("");
+            $("#dbusername").val("");
+            $("#dbpassword").val("");
+            $('#leveldb').val("");
+        }
     });
 </script>
 </body>
